Make changing update type also possible after using the wizard.

BUG: 248104

git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1170371 283d02a7-25f6-0310-bc7c-ecb5cbfe19da